# oxbuild

./: .gitignore  .taplo.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
apps/oxbuild/: Cargo.toml
apps/oxbuild/src/: cli.rs  main.rs  options.rs  walk.rs
apps/oxbuild/src/cli/: error.rs  root.rs
crates/oxbuild_compiler/: Cargo.toml
crates/oxbuild_compiler/src/: lib.rs  options.rs
src/: cli.rs  compiler.rs  main.rs  options.rs  reporter.rs  walk.rs
src/cli/: root.rs
src/compiler/: mod.rs  options.rs
src/compiler_/: mod.rs  options.rs
src/workspace/: error.rs  manifest.rs  mod.rs  package.rs  root.rs  tsconfig.rs  workspace_globs.rs
