[package]
name         = "oxbuild"
version      = "0.1.0"
description  = "Ultra-fast typescript compiler"
authors      = ["Don Isaac <don@donisaac.dev>"]
license      = "MIT"
repository   = "https://github.com/DonIsaac/oxbuild"
homepage     = "https://github.com/DonIsaac/oxbuild"
keywords     = ["typescript", "javascript", "compiler", "oxc", "oxbuild"]
categories   = ["development-tools", "web-programming", "compilers"]
edition      = "2021"
rust-version = "1.76.0"                                                   # Support last 6 minor versions

[[bin]]
name = "oxbuild"
path = "src/main.rs"

[dependencies]
anyhow              = { version = "1.0.89" }
clap                = { version = "4.5.17", features = ["cargo"] }
crossbeam           = { version = "0.8.4" }
ignore              = { version = "0.4.23" }
json-strip-comments = { version = "1.0.4" }
miette              = { version = "7.2.0", features = ["fancy"] }
oxc                 = { version = "0.29.0", features = ["full", "sourcemap", "isolated_declarations"] }
package-json        = { version = "0.4.0" }
rayon               = { version = "1.10.0" }
serde               = { version = "1.0.210" }
serde_json          = { version = "1.0.128" }
static_assertions   = { version = "1.1.0" }

[lints.clippy]
all        = { level = "warn", priority = -1 }
empty_docs = { level = "allow", priority = 1 }

dbg_macro    = "warn"
print_stdout = "warn"
print_stderr = "warn"

module_name_repetitions = "allow"
too_many_lines          = "allow"
must_use_candidate      = "allow"
doc_markdown            = "allow"
missing_const_for_fn    = "allow"
