[package]
name         = "oxbuild"
version      = "0.1.1"
description  = "Ultra-fast typescript compiler"
authors      = ["Don Isaac <don@donisaac.dev>"]
license      = "MIT"
repository   = "https://github.com/DonIsaac/oxbuild"
homepage     = "https://github.com/DonIsaac/oxbuild"
keywords     = ["typescript", "javascript", "compiler", "oxc", "oxbuild"]
categories   = ["development-tools", "web-programming", "compilers"]
edition      = "2021"
rust-version = "1.76.0"                                                   # Support last 6 minor versions

[[bin]]
name = "oxbuild"
path = "src/main.rs"

[dependencies]
anyhow              = { version = "1.0.89" }
clap                = { version = "4.5.17", features = ["cargo"] }
ignore              = { version = "0.4.23" }
json-strip-comments = { version = "1.0.4" }
miette              = { version = "7.2.0", features = ["fancy"] }
oxc                 = { version = "0.29.0", features = ["full", "sourcemap", "isolated_declarations"] }
package-json        = { version = "0.4.0" }
serde               = { version = "1.0.210" }
serde_json          = { version = "1.0.128" }
static_assertions   = { version = "1.1.0" }

[lints.clippy]
all        = { level = "warn", priority = -1 }
empty_docs = { level = "allow", priority = 1 }

dbg_macro    = "warn"
print_stdout = "warn"
print_stderr = "warn"

module_name_repetitions = "allow"
too_many_lines          = "allow"
must_use_candidate      = "allow"
doc_markdown            = "allow"
missing_const_for_fn    = "allow"

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 1

# defaults: https://doc.rust-lang.org/cargo/reference/profiles.html#release
[profile.release]
codegen-units = 4
strip         = "symbols"
lto           = "thin"
panic         = "abort"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
