[package]
name                   = "oxbuild"
version                = "0.1.0"
description.workspace  = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
oxbuild_compiler = { workspace = true }

clap      = { workspace = true }
crossbeam = { workspace = true }
ignore    = { workspace = true }
miette    = { workspace = true }
oxc       = { workspace = true }
rayon     = { workspace = true }
