[package]
name                   = "oxbuild_compiler"
version                = "0.1.0"
description.workspace  = true
authors.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
oxc               = { workspace = true }
static_assertions = { workspace = true }
